--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ img {
   width: 50px;
   height: 50px;
   cursor: pointer;
-  background: var(--bg-color);
+  background: transparent;
   z-index: 9999;
   border: none;
 }
@@ -370,6 +370,9 @@ img {
 }
 
 @media screen and (max-width: 768px) {
+  .header .nav ul {
+    background: transparent;
+  }
   .header .nav.active {
     width: 100%;
     height: 100%;
@@ -575,10 +578,23 @@ img {
   font-size: 4.28rem;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  -webkit-transform: translateY(100px);
-          transform: translateY(100px);
-  opacity: 0;
   line-height: 1.2;
+  -webkit-transition: opacity 0.7s ease-out 0.2s, -webkit-transform 0.7s ease-out 0.2s;
+  transition: opacity 0.7s ease-out 0.2s, -webkit-transform 0.7s ease-out 0.2s;
+  transition: transform 0.7s ease-out 0.2s, opacity 0.7s ease-out 0.2s;
+  transition: transform 0.7s ease-out 0.2s, opacity 0.7s ease-out 0.2s, -webkit-transform 0.7s ease-out 0.2s;
+  -webkit-animation-name: main-title;
+          animation-name: main-title;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
 }
 .sec01 .sec01-tbox .sec01-title span {
   display: block;
@@ -588,9 +604,6 @@ img {
   margin-top: 20px;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  -webkit-transform: translateY(100px);
-          transform: translateY(100px);
-  opacity: 0;
 }
 .sec01 .sec01-tbox.is-active .sec01-title {
   -webkit-transform: translateY(0);
@@ -605,6 +618,35 @@ img {
           transition-delay: 0.3s;
 }
 
+@-webkit-keyframes main-title {
+  from {
+    opacity: 0;
+  }
+  60% {
+    -webkit-transform: translateY(-10%);
+            transform: translateY(-10%);
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes main-title {
+  from {
+    opacity: 0;
+  }
+  60% {
+    -webkit-transform: translateY(-10%);
+            transform: translateY(-10%);
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+    opacity: 1;
+  }
+}
 .sec02 .profile .profile-img {
   vertical-align: middle;
   text-align: center;
