--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -165,7 +165,8 @@ img {
     width: 50px;
     height: 50px;
     cursor:pointer;
-    background: var(--bg-color);
+    // background: var(--bg-color);
+    background: transparent;
     z-index: 9999;
     border: none;
     &::before {
@@ -294,7 +295,7 @@ img {
 
 
 @media screen and (max-width:768px) {
-    
+.header .nav ul {background: transparent;}
 .header .nav.active {
     width: 100%; 
     height: 100%; 
