--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -83,15 +83,22 @@
         color: ab.$co-white;
         font-size: ab.$font60;
         @include ab.trans(0.5s);
-        @include ab.offeffect;
+        // @include ab.offeffect;
         line-height: 1.2;
         span {display: block }
+        transition: transform 0.7s ease-out 0.2s,opacity 0.7s ease-out 0.2s;
+        animation-name: main-title;
+        animation-duration: 0.5s;
+        animation-delay: 0.2s;
+        animation-iteration-count: 1;
+        animation-timing-function: linear;
+        animation-direction: alternate;
     }
     p {
         color: ab.$co-white;
         @include ab.mt(20px);
         @include ab.trans(0.5s);
-        @include ab.offeffect;
+        // @include ab.offeffect;
     }
     &.is-active .sec01-title{
         @include ab.oneffect;
@@ -99,6 +106,24 @@
     &.is-active p {
         @include ab.oneffect;
         transition-delay: 0.3s;
+    }
+}
+
+
+
+@keyframes main-title {
+	from {
+        opacity: 0;
+    }
+    
+
+    60% {
+        transform: translateY(-10%);
+    }
+    
+    to {
+        transform: translateY(0%);
+        opacity: 1;
     }
 }
 
@@ -442,27 +467,3 @@
 
 
 
-// transition: transform 0.7s ease-out 0.2s,opacity 0.7s ease-out 0.2s;
-//   animation-name: main-title;
-//   animation-duration: 1s;
-//   animation-delay: 1s;
-//   animation-iteration-count: 1;
-//   animation-timing-function: linear;
-//   animation-direction: alternate;
-
-
-// @keyframes main-title {
-// 	from {
-//     	opacity: 0;
-//     }
-    
-
-//     60% {
-//         transform: translateY(-20%);
-//     }
-    
-//     to {
-//         transform: translateY(0%);
-//     	opacity: 1;
-//     }
-// }
