[수정] 로고경로

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ img {
 }
 
 .dark .header .logo a {
-  background: url("../img/jlogo_w.svg") center no-repeat;
+  background: url("../img/jlogo-w.svg") center no-repeat;
 }
 
 .header .nav {
