--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -122,7 +122,7 @@ img {
     }
 }
 
-.dark .header .logo a {background: url("../img/jlogo_w.svg") center no-repeat;}
+.dark .header .logo a {background: url("../img/jlogo-w.svg") center no-repeat;}
 
 .header .nav {
     position: relative;
