--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -264,7 +264,7 @@
                 margin-top: 40px;
                 .site-name {
                     font-size: ab.$font18 ;
-                    color: var(--text-color);
+                    color: var(--basic-black);
                     font-weight: 500;
                 }
                 ul {
