--- a/assets/scss/abstracts/_variable.scss
+++ b/assets/scss/abstracts/_variable.scss
@@ -1,7 +1,7 @@
 @charset "uft-8";
 
 
-/* 컬러 */
+// 컬러
 $co-white : #fff;
 $co-point : #21cda4;
 $co-black : #303030;
@@ -20,7 +20,7 @@ $dco-primary :#e0e0e0;
 $dco-bg3:#1a1a1a;
 
 
-/* 폰트 */
+// 폰트
 $font12 : 0.85rem;
 $font14 : 1rem;
 $font16 : 1.142rem;
