--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -42,6 +42,7 @@ html,body {
     // background: ab.$co-white;
     background-color: var(--bg-color);
     color: var(--text-color);
+    position: relative;
 }
 
 div,ul,li,a,input,button,textarea {
