--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,14 @@ img {
     width: 92%;
   }
 }
+body.nscroll {
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  -ms-touch-action: none;
+      touch-action: none;
+}
+
 /* header*/
 .header {
   width: 100%;
@@ -179,7 +187,7 @@ img {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99999;
+  z-index: 999;
 }
 
 .dark .header .logo a {
@@ -602,6 +610,18 @@ img {
   margin-top: 20px;
   -webkit-transition-delay: 0.5s;
           transition-delay: 0.5s;
+  -webkit-animation-name: maintitle;
+          animation-name: maintitle;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
 }
 @-webkit-keyframes maintitle {
   from {
@@ -923,7 +943,7 @@ img {
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 999;
+  z-index: 9999;
 }
 .msg-popup-wrap.popView {
   display: block;
