--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -88,6 +88,12 @@ img {
     .inner {width: 92%;}
 }
 
+body.nscroll {
+    overflow:hidden;
+    width: 100%;
+    height: 100vh;
+    touch-action:none;
+}
 
 /* header*/ 
 .header {
@@ -119,7 +125,7 @@ img {
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 99999;
+        z-index: 999;
     }
 }
 
